# testzeus-mcp-server

./: .env.example  .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  notify-docs.yml  publish.yml
docs/: DEVELOPER_GUIDE.md  README.md
docs/examples/: USAGE_EXAMPLES.md
tests/: __init__.py  test_main.py  test_pyproject.py  test_server.py
testzeus_mcp_server/: __init__.py  __main__.py  server.py
